src/main/resources/tests/Semantics/good/operationBool2.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
 X : boolean;
begin
   X := true and true;
end ExampleProcedure;
