src/main/resources/tests/Semantics/bad/operationBool5.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
X : boolean;
begin
   X := true and then 2;
end ExampleProcedure;
